k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: virtual-job-platform
spec:
  podSelector:
    matchLabels:
      app: virtual-job-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: virtual-job-frontend
      ports:
        - protocol: TCP
          port: 5000
